--- a/.github/workflows/flutter-workflow.yaml
+++ b/.github/workflows/flutter-workflow.yaml
@@ -27,8 +27,8 @@ jobs:
       - name: send telegram message on push
         uses: appleboy/telegram-action@master
         with:
-          to: 5467979333
-          token: 6478602495:AAGYsVz6FU7lISKSnFhfJFBirKp8ofIwgdM
+          to: <add_to_key>
+          token: <add_your_token>
           message: |
             ${{ github.actor }} created commit:
             Commit message: ${{ github.event.commits[0].message }}
